--- a/demo28/src/app/@theme/components/quantity-input/quantity-input.component.html
+++ b/demo28/src/app/@theme/components/quantity-input/quantity-input.component.html
@@ -6,7 +6,7 @@
             </button>
         </div>
         <input type="number" style="text-align: center" class="form-control" required placeholder="" min="1" [max]="max"
-            [value]="current" (input)="changeCurrent($event)">
+            [value]="current" (input)="changeCurrent($event)" [disabled]="disabled">
         <div class="input-group-append">
             <button style="min-width: 26px" class="btn btn-increment btn-spinner" (click)="increment()" type="button">
                 <i class="icon-plus"></i>
