--- a/demo28/src/app/pages/product/shared/gallery/gallery.component.html
+++ b/demo28/src/app/pages/product/shared/gallery/gallery.component.html
@@ -6,8 +6,8 @@
       "$" + product.productSale.discount :
       product.productSale.discount + "%") }}
     </span>
+  <span class="product-label label-top" *ngIf="product.top">Top</span>
   <span class="product-label label-new" style="margin-top: 30px" *ngIf="product.new_">New</span>
-  <span class="product-label label-top"style="margin-top: 30px" *ngIf="product.top">Top</span>
 
     <owl-carousel [carouselClasses]="'product-gallery-carousel owl-full owl-nav-dark'" [options]="options">
         <molla-image class="d-block position-relative" [src]="item.src"
