update user authen

--- a/demo28/src/app/@theme/components/headers/header/header.component.html
+++ b/demo28/src/app/@theme/components/headers/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="header header-28 bg-transparent">
-    <div class="promo-top w-100 h-auto text-center" style="background-image: url(assets/images/home/promo.jpg); background-color: #87bbc7;">
+    <div class="promo-top w-100 h-auto text-center"
+        style="background-image: url(assets/images/home/promo.jpg); background-color: #87bbc7;">
     </div>
     <div class="header-top font-weight-normal text-light">
         <div [ngClass]="containerClass">
@@ -9,22 +10,41 @@
                     <li>
                         <a href="javascript:;">Links</a>
                         <ul>
-                            <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
-                            <li><a href="javascript:;" (click)="showLoginModal($event)"><i class="icon-user"></i>Login / Register</a></li>
+                            <li>
+                                <a href="tel:#">
+                                    <i class="icon-phone"></i>Call: +0123 456 789
+                                </a>
+                            </li>
+                            <li *ngIf="!authenService.isLoggedIn()">
+                                <a href="javascript:;"
+                                    (click)="showLoginModal($event)">
+                                    <i class="icon-user"></i>
+                                    Login / Register
+                                </a>
+                            </li>
+                            <li *ngIf="authenService.isLoggedIn()">
+                              <a href="javascript:;" (click)="logout()">
+                                <i class="icon-angle-right"></i>
+                                Logout
+                              </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="sticky-wrapper" [style.height]="utilsService.isSticky ? utilsService.stickyHeight + 'px' : '' ">
-        <div class="header-middle sticky-header" [class.fixed]="utilsService.isSticky">
+    <div class="sticky-wrapper"
+        [style.height]="utilsService.isSticky ? utilsService.stickyHeight + 'px' : '' ">
+        <div class="header-middle sticky-header"
+            [class.fixed]="utilsService.isSticky">
             <div [ngClass]="containerClass">
                 <div class="header-left">
                     <molla-mobile-button></molla-mobile-button>
 
                     <a routerLink="/" class="logo">
-                        <img src="assets/images/home/logo.png" alt="PlantNest" width="200" height="30">
+                        <img src="assets/images/home/logo.png" alt="PlantNest"
+                            width="200" height="30">
                     </a>
 
                     <molla-main-menu></molla-main-menu>
@@ -32,6 +52,10 @@
 
                 <div class="header-right">
                     <molla-header-search style="width: 100%;"></molla-header-search>
+
+                    <ng-container *ngIf="authenService.isLoggedIn()">
+                      <molla-account></molla-account>
+                    </ng-container>
 
                     <molla-wishlist-menu></molla-wishlist-menu>
 
