--- a/demo28/src/app/@theme/components/modals/login-modal/login-modal.component.html
+++ b/demo28/src/app/@theme/components/modals/login-modal/login-modal.component.html
@@ -9,49 +9,38 @@
                 <li ngbNavItem>
                     <a ngbNavLink>Sign In</a>
                     <ng-template ngbNavContent>
-                        <form action="#">
+                        <form (submit)="login()" [formGroup]="loginFormGroup">
                             <div class="form-group">
-                                <label for="singin-email">Username or email address *</label>
-                                <input type="text" class="form-control" id="singin-email" name="singin-email" required>
+                                <label for="singin-email">Username *</label>
+                                <input type="text" class="form-control" id="singin-email"
+                                  name="singin-email" required formControlName="username">
+                                <div class="alert alert-danger mt-1"
+                                  *ngIf="loginFormGroup.get('username').invalid && (loginFormGroup.get('username').dirty || loginFormGroup.get('username').touched)">
+                                  <div *ngIf="loginFormGroup.get('username').errors['required']">
+                                      Username is required
+                                  </div>
+                              </div>
                             </div>
 
                             <div class="form-group">
                                 <label for="singin-password">Password *</label>
-                                <input type="password" class="form-control" id="singin-password" name="singin-password"
-                                    required>
+                                <input type="password" class="form-control" id="singin-password"
+                                  name="singin-password" required formControlName="password">
+                                <div class="alert alert-danger mt-1"
+                                *ngIf="loginFormGroup.get('password').invalid && (loginFormGroup.get('password').dirty || loginFormGroup.get('password').touched)">
+                                <div *ngIf="loginFormGroup.get('password').errors['required']">
+                                    Password is required
+                                </div>
+                                </div>
                             </div>
 
                             <div class="form-footer">
-                                <button type="submit" class="btn btn-outline-primary-2">
+                                <button type="submit" class="btn btn-outline-primary-2" [disabled]="loginFormGroup.invalid">
                                     <span>LOG IN</span>
                                     <i class="icon-long-arrow-right"></i>
                                 </button>
-
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="signin-remember">
-                                    <label class="custom-control-label" for="signin-remember">Remember Me</label>
-                                </div>
-
-                                <a href="javascript:;" class="forgot-link">Forgot Your Password?</a>
                             </div>
                         </form>
-                        <div class="form-choice">
-                            <p class="text-center">or sign in with</p>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <a href="javascript:;" class="btn btn-login btn-g">
-                                        <i class="icon-google"></i>
-                                        Login With Google
-                                    </a>
-                                </div>
-                                <div class="col-sm-6">
-                                    <a href="javascript:;" class="btn btn-login btn-f">
-                                        <i class="icon-facebook-f"></i>
-                                        Login With Facebook
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
                     </ng-template>
                 </li>
                 <li ngbNavItem>
@@ -75,31 +64,8 @@
                                     <span>SIGN UP</span>
                                     <i class="icon-long-arrow-right"></i>
                                 </button>
-
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="register-policy" required>
-                                    <label class="custom-control-label" for="register-policy">I agree to the privacy
-                                        policy</label>
-                                </div>
                             </div>
                         </form>
-                        <div class="form-choice">
-                            <p class="text-center">or sign in with</p>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <a href="javascript:;" class="btn btn-login btn-g">
-                                        <i class="icon-google"></i>
-                                        Login With Google
-                                    </a>
-                                </div>
-                                <div class="col-sm-6">
-                                    <a href="javascript:;" class="btn btn-login  btn-f">
-                                        <i class="icon-facebook-f"></i>
-                                        Login With Facebook
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
                     </ng-template>
                 </li>
             </ul>
