--- a/demo28/src/app/@theme/components/headers/header/header.component.html
+++ b/demo28/src/app/@theme/components/headers/header/header.component.html
@@ -57,7 +57,7 @@
                       <molla-account></molla-account>
                     </ng-container>
 
-                    <molla-wishlist-menu></molla-wishlist-menu>
+                    <molla-wishlist-menu [wishlistQty]="wishCount"></molla-wishlist-menu>
 
                     <molla-cart-menu></molla-cart-menu>
                 </div>
