--- a/demo28/src/app/@theme/components/modals/login-modal/login-modal.component.html
+++ b/demo28/src/app/@theme/components/modals/login-modal/login-modal.component.html
@@ -6,66 +6,16 @@
     <div class="form-box">
         <div class="form-tab nav-fill">
             <ul ngbNav #nav="ngbNav" class="justify-content-center nav nav-pills">
-                <li ngbNavItem>
+                <li ngbNavItem [ngbNavItem]="1">
                     <a ngbNavLink>Sign In</a>
                     <ng-template ngbNavContent>
-                        <form (submit)="login()" [formGroup]="loginFormGroup">
-                            <div class="form-group">
-                                <label for="singin-email">Username *</label>
-                                <input type="text" class="form-control" id="singin-email"
-                                  name="singin-email" required formControlName="username">
-                                <div class="alert alert-danger mt-1"
-                                  *ngIf="loginFormGroup.get('username').invalid && (loginFormGroup.get('username').dirty || loginFormGroup.get('username').touched)">
-                                  <div *ngIf="loginFormGroup.get('username').errors['required']">
-                                      Username is required
-                                  </div>
-                              </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="singin-password">Password *</label>
-                                <input type="password" class="form-control" id="singin-password"
-                                  name="singin-password" required formControlName="password">
-                                <div class="alert alert-danger mt-1"
-                                *ngIf="loginFormGroup.get('password').invalid && (loginFormGroup.get('password').dirty || loginFormGroup.get('password').touched)">
-                                <div *ngIf="loginFormGroup.get('password').errors['required']">
-                                    Password is required
-                                </div>
-                                </div>
-                            </div>
-
-                            <div class="form-footer">
-                                <button type="submit" class="btn btn-outline-primary-2" [disabled]="loginFormGroup.invalid">
-                                    <span>LOG IN</span>
-                                    <i class="icon-long-arrow-right"></i>
-                                </button>
-                            </div>
-                        </form>
+                      <molla-login-form (loginSuccess)="($event) ? closeModal() : null"></molla-login-form>
                     </ng-template>
                 </li>
-                <li ngbNavItem>
+                <li ngbNavItem [ngbNavItem]="2">
                     <a ngbNavLink>Register</a>
                     <ng-template ngbNavContent>
-                        <form action="#">
-                            <div class="form-group">
-                                <label for="register-email">Your email address *</label>
-                                <input type="email" class="form-control" id="register-email" name="register-email"
-                                    required>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="register-password">Password *</label>
-                                <input type="password" class="form-control" id="register-password"
-                                    name="register-password" required>
-                            </div>
-
-                            <div class="form-footer">
-                                <button type="submit" class="btn btn-outline-primary-2">
-                                    <span>SIGN UP</span>
-                                    <i class="icon-long-arrow-right"></i>
-                                </button>
-                            </div>
-                        </form>
+                      <molla-register-form></molla-register-form>
                     </ng-template>
                 </li>
             </ul>
