complete cart and wishlist

--- a/demo28/src/app/@theme/components/headers/shared/main-menu/main-menu.component.html
+++ b/demo28/src/app/@theme/components/headers/shared/main-menu/main-menu.component.html
@@ -3,7 +3,7 @@
     <li class="megamenu-container" [class.active]="current=='/'">
       <a routerLink="/">Home</a>
     </li>
-    <li [class.active]="current.includes('/shop')">
+    <li [class.active]="current.includes('/shop/list')">
       <a routerLink="/shop/list">Shop</a>
     </li>
     <li [class.active]="current.includes('pages/about')">
