--- a/demo28/src/app/@theme/components/headers/shared/cart-menu/cart-menu.component.html
+++ b/demo28/src/app/@theme/components/headers/shared/cart-menu/cart-menu.component.html
@@ -1,67 +1,66 @@
 <ng-container *ngIf="authenService.isLoggedIn(); else notLoggedIn">
-  <div class="dropdown cart-dropdown">
+  <div class="dropdown cart-dropdown" *ngIf="cart != null">
     <a routerLink="/shop/cart" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false" data-display="static">
-        <div class="icon position-relative">
-            <i class="icon-shopping-cart"></i>
-            <span class="cart-count">{{ cartService.qtyTotal | async }}</span>
-        </div>
-        <span class="cart-txt font-weight-normal">${{ (cartService.priceTotal | async).toFixed(2) }}</span>
+      aria-expanded="false" data-display="static">
+      <div class="icon position-relative">
+        <i class="icon-shopping-cart"></i>
+        <span class="cart-count">{{ totalQuantity }}</span>
+      </div>
+      <span class="cart-txt font-weight-normal">{{ totalPrice | currency: "USD" }}</span>
     </a>
 
-    <div class="dropdown-menu dropdown-menu-right"
-        [ngClass]="{'text-center': (cartService.cartItems2 | async).length == 0}">
-        <p *ngIf="(cartService.cartItems2 | async).length == 0 else elseBlock">No products in the cart.</p>
+    <div class="dropdown-menu dropdown-menu-right" [ngClass]="{'text-center': cart.cartDetails.length == 0}">
+      <p *ngIf="cart.cartDetails.length == 0 else elseBlock">No products in the cart.</p>
 
-        <ng-template #elseBlock>
-            <div class="dropdown-cart-products">
-                <div class="product justify-content-between" *ngFor="let product of cartService.cartItems2 | async">
-                    <div class="product-cart-details">
-                        <h4 class="product-title">
-                            <a [routerLink]="['/product/default/']">{{ product.product.productName }}</a>
-                        </h4>
+      <ng-template #elseBlock>
+        <div class="dropdown-cart-products">
+          <div class="product justify-content-between" *ngFor="let cartDetail of cart.cartDetails">
+            <div class="product-cart-details">
+              <h4 class="product-title">
+                <a [routerLink]="'/product/detail/' + cartDetail.product.slug">
+                  {{ cartDetail.product.productName }}
+                </a>
+              </h4>
 
-                        <span class="cart-product-info">
-                            <span class="cart-product-qty">{{ product.productVariant.quantity }}</span>
-                            x ${{ product.product.sale ? '%': product.productVariant.price.toFixed(2) }}
-                        </span>
-                    </div>
-
-                    <figure class="product-image-container">
-                        <a [routerLink]="['/product/default/']" class="product-image">
-                            <img [src]="PRODUCT_IMAGE_DIRECTORY + product.product.imageUrl" alt="product" width="50" height="50">
-                        </a>
-                    </figure>
-
-                    <a href="javascript:;" class="btn-remove" title="Remove Product"
-                        (click)="removeFromCart( $event, product )"><i class="icon-close"></i></a>
-                </div>
+              <span class="cart-product-info">
+                <span class="cart-product-qty">{{ cartDetail.quantity }}</span>
+                x ${{ calcPriceAfterSale(cartDetail.productVariant.price, cartDetail.product.productSale) }}
+              </span>
             </div>
 
-            <div class="dropdown-cart-total">
-                <span>Total</span>
+            <figure class="product-image-container">
+              <a [routerLink]="'/product/detail/' + cartDetail.product.slug" class="product-image">
+                <img [src]="PRODUCT_IMAGE_DIRECTORY + cartDetail.product.imageUrl" alt="product" width="50" height="50">
+              </a>
+            </figure>
 
-                <span class="cart-total-price">${{ (cartService.priceTotal | async).toFixed(2) }}</span>
-            </div>
+            <a href="javascript:;" class="btn-remove" title="Remove Product"
+              (click)="removeFromCart($event, cartDetail)">
+              <i class="icon-close"></i>
+            </a>
+          </div>
+        </div>
 
-            <div class="dropdown-cart-action">
-                <a routerLink="/shop/cart" class="btn btn-primary">View Cart</a>
-                <a routerLink="/shop/checkout" class="btn btn-outline-primary-2"><span>Checkout</span><i
-                        class="icon-long-arrow-right"></i></a>
-            </div>
-        </ng-template>
+        <div class="dropdown-cart-total">
+          <span>Total</span>
+          <span class="cart-total-price">{{ totalPrice | currency: "USD" }}</span>
+        </div>
+
+        <div class="dropdown-cart-action">
+          <a routerLink="/shop/cart" class="btn btn-primary">View Cart</a>
+          <a routerLink="/shop/checkout" class="btn btn-outline-primary-2"><span>Checkout</span><i
+              class="icon-long-arrow-right"></i></a>
+        </div>
+      </ng-template>
     </div>
-</div>
+  </div>
 </ng-container>
 <ng-template #notLoggedIn>
   <div class="dropdown cart-dropdown" style="cursor: pointer" (click)="showErrorMessage()">
-    <a class="dropdown-toggle" role="button"
-        aria-expanded="false" >
-        <div class="icon position-relative">
-            <i class="icon-shopping-cart"></i>
-        </div>
+    <a class="dropdown-toggle" role="button" aria-expanded="false">
+      <div class="icon position-relative">
+        <i class="icon-shopping-cart"></i>
+      </div>
     </a>
   </div>
 </ng-template>
-
-
