--- a/demo28/src/app/pages/shop/cart/cart.component.html
+++ b/demo28/src/app/pages/shop/cart/cart.component.html
@@ -16,15 +16,15 @@
   </nav>
 
   <div class="page-content">
-      <div class="cart">
+      <div class="cart" *ngIf="cart != null">
           <div class="container">
-              <div class="row" *ngIf="cartItems.length == 0 else cartBlock">
+              <div class="row" *ngIf="cart.cartDetails.length == 0 else cartBlock">
                   <div class="col-12">
                       <div class="cart-empty-page text-center">
                           <i class="cart-empty icon-shopping-cart" style="line-height: 1; font-size: 15rem"></i>
                           <p class="px-3 py-2 cart-empty mb-3">No products added to the cart</p>
                           <p class="return-to-shop mb-0">
-                              <a routerLink="/shop/sidebar/list" class="btn btn-primary">RETURN TO SHOP</a>
+                              <a routerLink="/shop/list" class="btn btn-primary">RETURN TO SHOP</a>
                           </p>
                       </div>
                   </div>
@@ -44,35 +44,44 @@
                               </thead>
 
                               <tbody>
-                                  <tr *ngFor="let product of cartItems; trackBy : trackByFn">
+                                  <tr *ngFor="let cartDetail of cart.cartDetails">
                                       <td class="product-col">
                                           <div class="product">
                                               <figure class="product-media">
-                                                  <a [routerLink]="['/product/default/']">
-                                                      <molla-image [src]="PRODUCT_IMAGE_DIRECTORY + product.product.imageUrl"
+                                                  <a [routerLink]="'/product/detail/' + cartDetail.product.slug">
+                                                      <molla-image [src]="PRODUCT_IMAGE_DIRECTORY + cartDetail.product.imageUrl"
                                                           alt="Product">
                                                       </molla-image>
                                                   </a>
                                               </figure>
 
                                               <h3 class="product-title">
-                                                  <a
-                                                      [routerLink]="['/product/default/']">{{ product.product.productName }}</a>
+                                                  <a [routerLink]="'/product/detail/'+ cartDetail.product.slug">
+                                                    {{ cartDetail.product.productName }}
+                                                  </a>
                                               </h3>
                                           </div>
                                       </td>
                                       <td class="price-col">
-                                          {{ ( product.sale ? product.productVariant.price.toFixed( 2 ) : product.productVariant.price.toFixed( 2 ) ) | currency }}
+                                        <span class="old-price mr-3">
+                                          {{ cartDetail.productVariant.price | currency: 'USD' }}
+                                        </span>
+                                        <span style="font-weight: bold">
+                                          {{ calcPriceAfterSale(cartDetail.productVariant.price, cartDetail.product.productSale) | currency: "USD"}}
+                                        </span>
                                       </td>
-                                      <td class="quantity-col">
-                                          <molla-quantity-input adClass="cart-product-quantity" [value]="product.quantity"
-                                              [max]="product.stock" (changeQty)="onChangeQty( $event, product )">
+                                      <td class="quantity-col">odu
+                                          <molla-quantity-input adClass="cart-product-quantity"
+                                              [value]="cartDetail.quantity"
+                                              [max]="cartDetail.productVariant.quantity" (changeQty)="onChangeQty($event, cartDetail.product)">
                                           </molla-quantity-input>
                                       </td>
-                                      <td class="total-col">${{ (product.sum)  }}</td>
-                                      <td class="remove-col"><button class="btn-remove"
-                                              (click)="cartService.removeFromCart( product )"><i
-                                                  class="icon-close"></i></button></td>
+                                      <td class="total-col">{{totalPrice | currency: "USD"}}</td>
+                                      <td class="remove-col">
+                                        <button class="btn-remove" (click)="remove(cartDetail)">
+                                          <i class="icon-close"></i>
+                                        </button>
+                                      </td>
                                   </tr>
                               </tbody>
                           </table>
@@ -103,7 +112,7 @@
                                   <tbody>
                                       <tr class="summary-subtotal">
                                           <td>Subtotal:</td>
-                                          <td>${{ (cartService.priceTotal | async).toFixed(2)  }}
+                                          <td>{{ totalPrice | currency: "USD" }}
                                           </td>
                                       </tr>
 
@@ -157,7 +166,7 @@
 
                                       <tr class="summary-total">
                                           <td>Total:</td>
-                                          <td>${{ ((cartService.priceTotal | async) + shippingCost).toFixed(2) }}</td>
+                                          <td>{{ (totalPrice + shippingCost).toFixed(2) | currency: "USD"}}</td>
                                       </tr>
                                   </tbody>
                               </table>
