--- a/demo28/src/app/pages/shop/wishlist/wishlist.component.html
+++ b/demo28/src/app/pages/shop/wishlist/wishlist.component.html
@@ -8,7 +8,7 @@
           <a routerLink="/">Home</a>
         </li>
         <li class="breadcrumb-item">
-          <a routerLink="/shop/sidebar/list">Shop</a>
+          <a routerLink="/shop/list">Shop</a>
         </li>
         <li class="breadcrumb-item active">Wishlist</li>
       </ol>
@@ -28,12 +28,10 @@
         <table class="table table-wishlist table-mobile">
           <thead>
             <tr>
-              <th>Product</th>
-              <th>Price</th>
-              <th>Catalog</th>
-              <th>Difficulty</th>
-              <th></th>
-              <th></th>
+              <th style="width: 30%;">Product</th>
+              <th style="width: 30%;">Price</th>
+              <th style="width: 20%;">Catalog</th>
+              <th style="width: 20%;">Difficulty</th>
             </tr>
           </thead>
 
@@ -42,22 +40,50 @@
               <td class="product-col">
                 <div class="product">
                   <figure class="product-media">
-                    <a [routerLink]="['/product/default/']">
+                    <a [routerLink]="'/product/detail/' + product.slug">
                       <molla-image [src]="PRODUCT_IMAGE_DIRECTORY + product.imageUrl" alt="Product">
                       </molla-image>
                     </a>
                   </figure>
 
                   <h3 class="product-title">
-                    <a [routerLink]="['/product/default/']">{{ product.productName }}</a>
+                    <a [routerLink]="'/product/detail/' + product.slug">{{ product.productName }}</a>
                   </h3>
                 </div>
               </td>
               <td class="price-col">
-                <div class="product-price d-inline-block mb-0"
-                  *ngIf="">
-                  <span>
-                    ${{product.minPrice}}
+                <div class="product-price d-inline-block mb-0">
+                  <span class="product-price">
+                    <ng-container *ngIf="product.minPrice == product.maxPrice; else twoPriceBlock">
+                      <ng-container *ngIf="product.productSale === null; else discountBlock">
+                        {{ product.maxPrice | currency: 'USD'}}
+                      </ng-container>
+                      <ng-template #discountBlock>
+                        <span class="old-price mr-3">
+                          {{ product.maxPrice | currency: 'USD' }}
+                        </span>
+                        <span style="font-weight: bold">
+                          {{ calcPriceAfterSale(product.maxPrice, product.productSale) | currency: "USD"}}
+                        </span>
+                      </ng-template>
+                    </ng-container>
+
+                    <ng-template #twoPriceBlock>
+                      <ng-container *ngIf="product.productSale === null; else discount2Block">
+                        <span>
+                          {{product.minPrice | currency: 'USD'}}&ndash;{{product.maxPrice | currency: 'USD'}}
+                        </span>
+                      </ng-container>
+                      <ng-template #discount2Block>
+                        <span class="old-price" style="margin-right: 10px">
+                          {{product.minPrice | currency: 'USD'}}&ndash;{{product.maxPrice | currency: 'USD'}}
+                        </span>
+                        <span class="font-weight-bold">
+                          {{ calcPriceAfterSale(product.minPrice, product.productSale) | currency: "USD" }} -
+                          {{ calcPriceAfterSale(product.maxPrice, product.productSale) | currency: "USD" }}
+                        </span>
+                      </ng-template>
+                    </ng-template>
                   </span>
                 </div>
 
@@ -79,16 +105,25 @@
                   </ng-template>
                 </ng-template>
               </td>
+
+
+
               <td class="stock-col">
-                <span class="in-stock">{{product.catalog.catalogName}}</span>
+                <a *ngIf="product.catalog != null" routerLink="/shop/list/" [queryParams]="{catalog: product.catalog.catalogName.toLowerCase()}">
+                  <span class="in-stock">{{product.catalog.catalogName}}</span>
+                </a>
+              </td>
+              <td class="stock-col">
+                <a  *ngIf="product.plantingDifficultyLevel != null" routerLink="/shop/list/" [queryParams]="{level: product.plantingDifficultyLevel.level.toLowerCase()}">
+                  <span class="in-stock">{{product.plantingDifficultyLevel.level}}</span>
+                </a>
               </td>
               <td class="action-col">
-                {{product.plantingDifficultyLevel.level}}
-              </td>
-              <td class="action-col">
-                <button class="btn btn-block btn-outline-primary-2">
-                  <i class="icon-cart-plus"></i>Options
-                </button>
+                <a [routerLink]="'/product/detail/' + product.slug">
+                  <button class="btn btn-block btn-outline-primary-2">
+                    <i class="icon-cart-plus"></i>Options
+                  </button>
+                </a>
               </td>
 
               <td class="remove-col">
