update unsubscribe subscriptions in component, and breadcrumbs

--- a/demo28/src/app/pages/product/detail/detail.component.html
+++ b/demo28/src/app/pages/product/detail/detail.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <molla-breadcrumb current="Extended">
+  <molla-breadcrumb current="Detail">
   </molla-breadcrumb>
 
   <div class="page-content">
