--- a/demo28/src/app/@theme/components/headers/shared/account/account.component.html
+++ b/demo28/src/app/@theme/components/headers/shared/account/account.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/shop/wishlist" class="wishlist-link" title="Wishlist">
+<a routerLink="/dashboard" class="wishlist-link" title="Wishlist">
     <div class="icon position-relative">
         <i class="icon-user"></i>
     </div>
