--- a/demo28/src/app/pages/home/trendy-collection/trendy-collection.component.html
+++ b/demo28/src/app/pages/home/trendy-collection/trendy-collection.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="heading d-flex flex-column flex-md-row">
       <h2 class="title align-self-center letter-spacing-normal text-center text-md-left" contentAnim aniName="blurIn">
-
+        {{title}}
       </h2>
 
     </div>
