--- a/demo28/src/app/pages/shop/cart/cart.component.html
+++ b/demo28/src/app/pages/shop/cart/cart.component.html
@@ -8,7 +8,7 @@
                     <a routerLink="/">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a routerLink="/shop/sidebar/3cols">Shop</a>
+                    <a routerLink="/shop/list">Shop</a>
                 </li>
                 <li class="breadcrumb-item active">Shopping Cart</li>
             </ol>
