--- a/demo28/src/app/@theme/components/accordion/card/card.component.html
+++ b/demo28/src/app/@theme/components/accordion/card/card.component.html
@@ -2,8 +2,9 @@
     <div class="card-header">
         <h2 class="card-title">
             <a role="button" data-toggle="collapse" [href]="'#' + bodyID" aria-expanded="true"
-                aria-controls="collapse-1" [class.collapsed]="! show">
-                <i [ngClass]="icon" *ngIf="icon"></i>{{ title }}
+                aria-controls="collapse-1" [class.collapsed]="! show" [innerHTML]="title">
+                <i [ngClass]="icon" *ngIf="icon"></i>
+                <span></span>
             </a>
         </h2>
     </div>
