--- a/demo28/src/app/pages/dashboard/home/home.component.html
+++ b/demo28/src/app/pages/dashboard/home/home.component.html
@@ -21,26 +21,10 @@
         <div class="row">
           <aside class="col-md-4 col-lg-3">
             <ul class="nav nav-dashboard flex-column mb-3 mb-md-0" role="tablist" tabClick>
-              <li class="nav-item">
-                <a class="nav-link" [class.active]="selectingTabIndex == 1" href="javascript:;"
-                    role="tab" (click)="nav.select('tab-1'); selectingTabIndex = 1">
-                  Dashboard
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"  [class.active]="selectingTabIndex == 2" href="javascript:;"
-                    role="tab" (click)="nav.select('tab-2'); selectingTabIndex = 2">
-                  Orders
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:;" role="tab" (click)="nav.select('tab-4')">
-                  Adresses
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:;" role="tab" (click)="nav.select('tab-5')">
-                  Account Details
+              <li class="nav-item" *ngFor="let tab of tabs">
+                <a class="nav-link" [class.active]="selectingTabIndex == tab.tabIndex" [routerLink]="'/dashboard'"
+                  [fragment]="tab.fragment" href="javascript:;" role="tab" (click)="selectTab(tab)">
+                  {{tab.label}}
                 </a>
               </li>
               <li class="nav-item">
@@ -52,112 +36,24 @@
           <div class="col-md-8 col-lg-9">
             <div class="tab-content">
               <ul ngbNav #nav="ngbNav">
-                <li [ngbNavItem]="'tab-1'">
+                <li [ngbNavItem]="'dashboard'">
                   <ng-template ngbNavContent>
-                    <p>Hello <span class="font-weight-normal text-dark">User</span> (not <span
-                        class="font-weight-normal text-dark">User</span>? <a routerLink="/">Log out</a>)
-                      <br>
-                      From your account dashboard you can view your <a href="javascript:;"
-                        (click)="nav.select('tab-2'); viewTab( $event, 0, 1 );"
-                        class="tab-trigger-link link-underline">recent orders</a>, manage your
-                      <a href="javascript:;" (click)="nav.select('tab-2'); viewTab( $event, 0, 3 );"
-                        class="tab-trigger-link">shipping and billing addresses</a>, and <a href="javascript:;"
-                        (click)="nav.select('tab-2'); viewTab( $event, 0, 4 );" class="tab-trigger-link">edit your
-                        password and account details</a>.
-                    </p>
+                    <dashboard-dashboard-tab [nav]="nav"></dashboard-dashboard-tab>
                   </ng-template>
                 </li>
-
-                <li [ngbNavItem]="'tab-2'">
+                <li [ngbNavItem]="'orders'" (click)="loadOrders()">
                   <ng-template ngbNavContent>
-                    <p>No order has been made yet.</p>
-                    <a routerLink="/shop/sidebar/list" class="btn btn-outline-primary-2"><span>GO
-                        SHOP</span><i class="icon-long-arrow-right"></i></a>
+                    <dashboard-orders-tab [orders]="orders" [loadedOrders]="loadedOrders" [filters]="filters"></dashboard-orders-tab>
                   </ng-template>
                 </li>
-
-                <li [ngbNavItem]="'tab-3'">
+                <li [ngbNavItem]="'addresses'">
                   <ng-template ngbNavContent>
-                    <p>No downloads available yet.</p>
-                    <a routerLink="/shop/sidebar/list" class="btn btn-outline-primary-2"><span>GO
-                        SHOP</span><i class="icon-long-arrow-right"></i></a>
+                    <dashboard-addresses-tab></dashboard-addresses-tab>
                   </ng-template>
                 </li>
-
-                <li [ngbNavItem]="'tab-4'">
+                <li [ngbNavItem]="'account-details'">
                   <ng-template ngbNavContent>
-                    <p>The following addresses will be used on the checkout page by default.</p>
-
-                    <div class="row">
-                      <div class="col-lg-6">
-                        <div class="card card-dashboard">
-                          <div class="card-body">
-                            <h3 class="card-title">Billing Address</h3>
-
-                            <p>User Name<br>
-                              User Company<br>
-                              John str<br>
-                              New York, NY 10001<br>
-                              1-234-987-6543<br>
-                              yourmail@mail.com<br>
-                              <a href="javascript:;">Edit <i class="icon-edit"></i></a>
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-6">
-                        <div class="card card-dashboard">
-                          <div class="card-body">
-                            <h3 class="card-title">Shipping Address</h3>
-
-                            <p>You have not set up this type of address yet.<br>
-                              <a href="javascript:;">Edit <i class="icon-edit"></i></a>
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </ng-template>
-                </li>
-
-                <li [ngbNavItem]="'tab-5'">
-                  <ng-template ngbNavContent>
-                    <form action="#">
-                      <div class="row">
-                        <div class="col-sm-6">
-                          <label>First Name *</label>
-                          <input type="text" class="form-control" required>
-                        </div>
-
-                        <div class="col-sm-6">
-                          <label>Last Name *</label>
-                          <input type="text" class="form-control" required>
-                        </div>
-                      </div>
-
-                      <label>Display Name *</label>
-                      <input type="text" class="form-control" required>
-                      <small class="form-text">This will be how your name will be displayed in the
-                        account section and in reviews</small>
-
-                      <label>Email address *</label>
-                      <input type="email" class="form-control" required>
-
-                      <label>Current password (leave blank to leave unchanged)</label>
-                      <input type="password" class="form-control">
-
-                      <label>New password (leave blank to leave unchanged)</label>
-                      <input type="password" class="form-control">
-
-                      <label>Confirm new password</label>
-                      <input type="password" class="form-control mb-2">
-
-                      <button type="submit" class="btn btn-outline-primary-2">
-                        <span>SAVE CHANGES</span>
-                        <i class="icon-long-arrow-right"></i>
-                      </button>
-                    </form>
+                    <dashboard-account-details-tab></dashboard-account-details-tab>
                   </ng-template>
                 </li>
               </ul>
@@ -167,5 +63,6 @@
         </div>
       </div>
     </div>
+
   </div>
 </main>
