--- a/demo28/src/app/pages/dashboard/shared/account-details-tab/account-details-tab.component.html
+++ b/demo28/src/app/pages/dashboard/shared/account-details-tab/account-details-tab.component.html
@@ -1,35 +1,121 @@
-<form action="#">
-  <div class="row">
-    <div class="col-sm-6">
-      <label>First Name *</label>
-      <input type="text" class="form-control" required>
-    </div>
+<div class="container">
+  <div class="row flex-lg-nowrap">
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <div class="e-profile">
+            <div class="row">
+              <div class="col-12 col-sm-auto">
+                <img class="rounded-circle border border-success"
+                  style="width: 135px; height: 135px; object-fit: cover;"
+                  [src]="loggedInAccount.image != null ? ACCOUNT_IMAGE_DIRECTORY + loggedInAccount.image.imageUrl : 'assets/images/no-image-user.png'"
+                  alt="">
+                <div *ngIf="fileStatus?.status==='progress'" class="progress mt-1">
+                  <div class="progress-bar bg-info" role="progressbar" [style.width.%]="fileStatus?.percentage"
+                    aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                    {{fileStatus?.percentage}}%</div>
+                </div>
+              </div>
+              <div class="col d-flex flex-column flex-sm-row justify-content-between mb-3">
+                <div class="text-center text-sm-left mb-2 mb-sm-0">
+                  <h4 class="pt-sm-2 pb-1 mb-0 text-nowrap">{{loggedInAccount?.fullName}}</h4>
+                  <p class="mb-0">{{loggedInAccount?.username}}</p>
+                  <div class="mt-2">
+                    <button (click)="updateProfileImage()" class="btn btn-primary" type="button">
+                      <i class="fa fa-fw fa-camera"></i>
+                      <span>Change Photo</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="text-center text-sm-right">
+                  <div class="text-muted">
+                    <small>Joined {{loggedInAccount?.createdAt | date:'mediumDate'}}</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tab-content">
+              <div class="tab-pane active">
+                <form [formGroup]="changeProfileFormGroup" (ngSubmit)="changeProfile()" class="form">
+                  <div class="row">
+                    <div class="col-lg-6 col-sm-12">
+                      <div class="form-group">
+                        <label>Username</label>
+                        <input type="text" formControlName="username" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-12">
+                      <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" formControlName="email" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="form-group">
+                        <label>Full Name</label>
+                        <input type="text" formControlName="fullName" class="form-control">
+                      </div>
+                      <div class="alert alert-danger mt-1" *ngIf="changeProfileFormGroup.get('fullName').invalid &&
+				                  (changeProfileFormGroup.get('fullName').dirty ||
+                           changeProfileFormGroup.get('fullName').touched)">
+                        <div *ngIf="changeProfileFormGroup.get('fullName').errors['notblank']">
+                          Full Name is required
+                        </div>
+                        <div *ngIf="changeProfileFormGroup.get('fullName').errors['minlength']">
+                          Full Name must have at least 3 character
+                        </div>
+                        <div *ngIf="changeProfileFormGroup.get('fullName').errors['maxlength']">
+                          Full Name must not exceed 100 characters
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-12">
+                      <div class="form-group">
+                        <label>Current Password (leave blank to leave unchanged)</label>
+                        <input type="password" formControlName="currentPassword" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-12">
+                      <div class="form-group">
+                        <label>New Password (leave blank to leave unchanged)</label>
+                        <input type="password" formControlName="newPassword" class="form-control">
+                      </div>
+                      <div class="alert alert-danger mt-1" *ngIf="changeProfileFormGroup.get('newPassword').invalid &&
+	                        (changeProfileFormGroup.get('newPassword').dirty ||
+                          changeProfileFormGroup.get('newPassword').touched)">
+                        <div *ngIf="changeProfileFormGroup.get('newPassword').errors['notblank']">
+                          Password is required
+                        </div>
+                        <div *ngIf="changeProfileFormGroup.get('newPassword').errors['minlength']">
+                          Password must have at least 6 character
+                        </div>
+                        <div *ngIf="changeProfileFormGroup.get('newPassword').errors['maxlength']">
+                          Password must not exceed 50 characters
+                        </div>
+                      </div>
+                    </div>
 
-    <div class="col-sm-6">
-      <label>Last Name *</label>
-      <input type="text" class="form-control" required>
+                  </div>
+                  <div class="row">
+                    <div class="col d-flex justify-content-end">
+                      <button class="btn btn-primary" type="submit" [disabled]="!isFormChanged">
+                        <i *ngIf="refreshing" class="fas fa-spinner fa-spin"></i>&nbsp;&nbsp;
+                        <span *ngIf="refreshing">Loading...</span>
+                        <span *ngIf="!refreshing">Save Changes</span>
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-  <label>Display Name *</label>
-  <input type="text" class="form-control" required>
-  <small class="form-text">This will be how your name will be displayed in the
-    account section and in reviews</small>
-
-  <label>Email address *</label>
-  <input type="email" class="form-control" required>
-
-  <label>Current password (leave blank to leave unchanged)</label>
-  <input type="password" class="form-control">
-
-  <label>New password (leave blank to leave unchanged)</label>
-  <input type="password" class="form-control">
-
-  <label>Confirm new password</label>
-  <input type="password" class="form-control mb-2">
-
-  <button type="submit" class="btn btn-outline-primary-2">
-    <span>SAVE CHANGES</span>
-    <i class="icon-long-arrow-right"></i>
-  </button>
+<form enctype="multipart/form-data" style="display:none;">
+  <input type="file" (change)="onProfileImageChange($event); onUpdateProfileImage()" name="profile-image-input"
+    id="profile-image-input" placeholder="file" accept="image/*" />
 </form>
